[project]
name = "back-end-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.10.0",
    "fastapi[all]>=0.115.4",
    "mysqlclient>=2.2.5",
    "pypdf>=5.1.0",
    "pypdf2>=3.0.1",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.32.0",
    "pdf2image>=1.17.0",
    "pillow>=11.0.0",
    "redis>=5.2.0",
    "aioredis>=2.0.1",
    "neo4j>=5.26.0",
    "spark-ai-python>=0.4.5",
    "websockets>=13.1",
    "httpx[socks]>=0.27.2",
    "ruff>=0.7.3",
]

[tool.poetry]
name = "径山藏"
version = "0.1.0"
description = "Your package description"
authors = ["Xu Yihan <81723334@qq.com>","Xv Lizhi <xvlizhi24@163.com>"]
